Enable emoji goodness :tada: :party: :monkey:

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "https://amoustache.net/"
 languageCode = "en-us"
 theme = "moustachioed"
+enableEmoji = true
 
 title = "I am A. Moustache."
 copyright = "Made with 🍤 🍚."
