Make description a bit more uhm descriptive

--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ copyright = "Made with 🍤 🍚."
 
 [params]
 fontawesome = "87ac18817c"
-description = "Andrei Mustață (Moustache) is a software engineer."
+description = "Andrei Mustață (Moustache) is a software engineer, and this is his blog."
 subtitle = "& this is my stuff"
 cookiebotid = "dd5dc4b4-b6c7-49df-b9e2-feabef0843f8"
 googleanalyticstrackingid = "UA-3938207-9"
