--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
     - run: npm ci
-    - run: hugo --minify
+    - run: hugo --minify --debug --verbose --cleanDestinationDir
     - name: Deploy site
       uses: peaceiris/actions-gh-pages@v3
       with:
