--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/andreimoustache/andreimoustache.github.io#readme",
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@tailwindcss/typography": "^0.5.9",
     "postcss": "^8.4.13",
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.3.1"
